GNOME Bugzilla – Bug 765526
open-file-and-close-window action accelerator conflicts with keyboard rubberbanding
Last modified: 2021-06-18 15:51:59 UTC
The accelerator (ctrl-shift-down) for the “open-file-and-close-window” action conflicts with the keyboard rubberbanding key combination in the icon view (ctrl-shift-arrow key). Expected result: files are selected Actual result: currently selected files are all opened and the Nautilus window closes
The obvious fix here would be to change the accelerator for the offending action, but it might break the workflow for some people.
Note that this works for folders too! It closing current nautilus window to open another nautilus window,... which is useless. This feature looks like a remnant from the "spacial file browser" days. Under that paradigm, navigating down to a folder and navigating down to a file were seen as equivalent actions, both opening in a new window. The desktop was file-centered, not app-centered, so it all made sense. One problem with spacial nautilus was that the number of open windows you could end up with. I bet <Ctrl><Shift><down> was born as a way keep open windows to a minimum, by closing the parent when you were just navigating down. None of that applies nowadays. If we must keep this, for an alternative shortcut, I suggest <Alt><Shift><o>, because <Alt><o> is already a shortcut to open files and folders.
Another issue: this shortcut closes the whole window. It should only close the current tab.
I was all for purging this, but we had some sort of disagreement.
GNOME is going to shut down bugzilla.gnome.org in favor of gitlab.gnome.org. As part of that, we are mass-closing older open tickets in bugzilla.gnome.org which have not seen updates for a longer time (resources are unfortunately quite limited so not every ticket can get handled). If you can still reproduce the situation described in this ticket in a recent and supported software version of Files (nautilus), then please follow https://wiki.gnome.org/GettingInTouch/BugReportingGuidelines and create a new ticket at https://gitlab.gnome.org/GNOME/nautilus/-/issues/ Thank you for your understanding and your help.