general: Kill off NAUTILUS_WINDOW_OPEN_FLAG_CLOSE_BEHIND

bb884cb6151a10523276c2888011692877c686a3 changed the accelerator for
open-file-and-close-window from alt-shift-down to ctrl-shift-down, which
now conflicts with keyboard rubberbanding in the canvas view.
Additionally, it’s nothing more than a relict from a more spatial time.

https://bugzilla.gnome.org/show_bug.cgi?id=765526

Fixes https://gitlab.gnome.org/GNOME/nautilus/issues/701